# rust-examples

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Cargo.toml.ws  foo.txt  readme.md  rustfmt.toml
.github/workflows/: snyk-infrastructure-analysis.yml
actix-web-demo/: .gitignore  Cargo.toml  script.sh
actix-web-demo/examples/: select.rs
actix-web-demo/my-app/: package.json  pnpm-lock.yaml  vite.config.ts
actix-web-demo/my-app/src/routes/: +page.svelte
actix-web-demo/src/: account.rs  doc.rs  main.rs  org.rs  sse.rs  user.rs
actix-web-demo/src/auth/: jwt.rs  jwt_v2.rs  middleware.rs  mod.rs
actix-web-demo/src/model/: group.rs  mod.rs  user.rs
add/add-one/: Cargo.toml
add/adder/: Cargo.toml
advanced/: .gitignore
applevisor-demo/: Cargo.toml
applevisor-demo/src/: main.rs  main2.rs
art/: Cargo.toml
art/src/: lib.rs
axum-todos/: Cargo.toml
bindgen-bzip2-sys/: Cargo.toml  build.rs
bindgen-demo-bzip2/: Cargo.toml
bindgen-go-simple/: Cargo.toml  build.rs  main.go
bindgen-go-simple/src/: main.rs
bindgen-hello/: Cargo.toml  build.rs
bindgen-hello-cc/: Cargo.toml  build.rs
bindgen-hello-cc/src/: main.rs
blog/: Cargo.toml
blog/src/: lib.rs  main.rs
blog2/: Cargo.toml
blog2/src/: main.rs
closure/: Cargo.toml
closure/src/: main.rs
command/: Cargo.toml
concurrency/: .gitignore  channel.rs  mutex.rs
concurrency/src/: main.rs
crates/: Cargo.toml
crates/src/: back_of_house.rs  demo.rs  demo_v3.rs  lib.rs  main.rs
diesel-sqlite-demo/: Cargo.toml  data.sqlite3
diesel-sqlite-demo/migrations/2025-05-13-150726_init/: up.sql
diesel-sqlite-demo/src/: main.rs  models copy 1.rs  models copy 2.rs  models copy 3.rs  models copy 4.rs  models copy 5.rs  models copy.rs  models.rs  schema.rs
dotenv-demo/: .env  Cargo.toml
dotenv-demo/src/: main.rs
dyn-clone-demo/: Cargo.toml
dyn-clone-demo/src/: main-dyn-clone.rs  main.rs
dyn-trait/: Cargo.toml
dyn-trait/src/: main.rs  main.rs.1  main.rs.ok  step.rs
enums/: Cargo.toml
errors/: complex  option  option.rs  panic  panic.rs  result  result.rs  result_box  result_box.rs  result_custom  result_custom.rs  result_option  result_option.rs  result_populate  result_populate.rs  result_wrap.rs
examples/: bytes.rs  get_if_addrs.rs  local-ip-std.rs  local_ip.rs  local_ipaddress.rs  machine_ip.rs  pnet.rs  strum_macros.rs  tokio.rs  tokio_select.rs
excel/: Cargo.toml  readme.md
excel/src/: config.rs  lib.rs  main.rs  search.rs
fearless-concurrency/: Cargo.toml
fn-demo/: Cargo.toml
fn-demo/src/: main.rs
genericity/: Cargo.toml
genericity/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
gui/: Cargo.toml
gui/src/: lib.rs  main.rs
hello-cc/: Cargo.toml  build.rs  main.c
hello-cc/src/: main.rs
hello-ramdisk/: Cargo.toml  hello.rs
hello-ramdisk/src/: main-linux-ramdisk.rs  main-std-tmp.rs  main-tempfile.rs  main.rs
hello_cargo/: Cargo.toml
hello_macro/: Cargo.toml
hello_macro/hello_macro_derive/: Cargo.toml
hello_server/: Cargo.toml
hello_server/src/: main.rs  thread_pool.rs
inner-arc/: Cargo.toml
inner-arc/src/: main.rs
ip-addr/: Cargo.toml
iterator/: Cargo.toml
iterator/src/: main.rs
learning/: 10-1  15-6  15-6.rs  3-5  3-5.rs  4-3  4-3.rs  5-1  5-1.rs  5-2  5-2.rs  bench.rs  macros_struct  macros_struct.rs  poem.txt
learnning/: arc  buf_write.rs  enum_from_str.rs  foo.txt  line_writer.rs  ordering.rs  rwlock.rs  structs.rs
macro-demo/: Cargo.toml
macro-demo/macro-demo/: Cargo.toml  expand.rs
macro-demo/macro-demo/src/: main.rs
macro-demo/macros/: Cargo.toml
macros/src/: lib.rs  main.rs
minigrep/: Cargo.toml  output.txt
minigrep/src/: lib.rs  main.rs
misc/: Cargo.toml
misc/src/afc/: main.rs
misc/src/async/: main.rs
misc/src/cfg/: main.rs
misc/src/io/: main.rs
misc/src/json/: main.rs
misc/src/macro/: main.rs  route.rs
misc/src/trait/: main.rs
misc/src/type/: main.rs
misc/src/unsafe/: main.rs
multiwriter-async/: Cargo.toml
multiwriter-async/src/: main.rs
multiwriter-std/: Cargo.toml
multiwriter-std/src/: main.rs
mutex/: Cargo.toml
mutex/src/: main.rs
openssl-vendored-demo/: Cargo.toml
openssl-vendored-demo/.cargo/: config.toml
openssl-vendored-demo/src/: main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
package-and-crate/: Cargo.toml
package-and-crate/src/: lib.rs
pattern/: .gitignore  match.rs
quotea_borrow/: Cargo.toml
quotea_borrow/src/: main.rs
ramdisk-demo/: Cargo.toml  build.rs
ramdisk-demo/src/: diskfile-to-ram.rs  main.rs
redis_demo/: Cargo.toml
redis_demo/src/: main.rs
schemars-demo/: Cargo.toml
schemars-demo/src/: main.rs
sciter-demo/: Cargo.toml
sciter-demo/src/: main.rs
sea-orm-demo/: .env  Cargo.toml  expand.rs
sea-orm-demo/api/: Cargo.toml
sea-orm-demo/entity/: Cargo.toml
sea-orm-demo/entity/src/: post copy.rs  post.rs  posts.rs  prelude.rs
sea-orm-demo/middleware/: Cargo.toml
sea-orm-demo/migration/: Cargo.toml
sea-orm-demo/migration/src/: lib.rs  m20220120_000001_create_post_table.rs  m20250517_010325_add_kvs.rs  m20250520_103407_add_parent_id.rs
sea-orm-demo/service/: Cargo.toml
sea-orm-demo/service/src/: mutation.rs  query.rs
sea-orm-demo/service/tests/: prepare.rs
serde_demo/: Cargo.toml
serde_demo/src/: main.rs
simple_http/: Cargo.toml
simple_http/src/: main.rs
sled/: Cargo.toml
sled/src/: main.rs
smartpointer/: .gitignore  Cargo.toml  rc.rs  refcell.rs  weak.rs
smartpointer/src/: lib.rs  main.rs
stdout-async/: Cargo.toml
stdout-async/src/: delim_reader.rs  main.rs  multi_writer.rs  remote_cmd.rs
stdout-demo/: Cargo.toml
stdout-demo/src/: main.rs  main2.rs  multi_writer.rs  remote_cmd.rs
stdout-std/: Cargo.toml
stdout-std/src/: delim_reader.rs  main.rs  multi_writer.rs  remote_cmd.rs
thread-demo/: Cargo.toml
thread-demo/src/: main.rs
tokio-oncecell-demo/: Cargo.toml
tokio-oncecell-demo/src/: main.rs
tokio-panic/: Cargo.toml
tokio-panic/src/: main.rs
tokio_demo/: Cargo.toml
tokio_demo/src/: main.rs
tracing-demo/: Cargo.toml
(+11 files in other folders)
