[package]
name = "rust-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
ipnetwork = "0.18.0"
local-ip = "0.1.0"
local-ip-address = "0.4.4"
local_ipaddress = "0.1.3"
machine-ip = "0.2.1"
pnet = "0.28.0"
tokio = { version = "1.10.0", features = ["full"] }
get_if_addrs = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# strum = { version = "0.26", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
