[package]
name = "diesel-sqlite-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2", features = [
    "128-column-tables",
    "chrono",
    "mysql",
    "network-address",
    "numeric",
    "postgres",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
    "serde_json",
    "sqlite",
    "uuid",
], default-features = false }
diesel-derive-enum = "2.1"
diesel_logger = "0.4"
diesel_migrations = { version = "2.2", features = [
    "mysql",
    "postgres",
    "sqlite",
] }
libsqlite3-sys = { version = "0.33", features = ["bundled"] }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
