[package]
name = "misc"
version = "0.1.0"
authors = ["wk30 <foo_stacker@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
json = "*"
hello_macro = { path = "../hello_macro" }
hello_macro_derive = { path = "../hello_macro/hello_macro_derive" }
futures = "*"

# [lib]
# path = "src/lib.rs"

[[bin]]
name = "io"
path = "src/io/main.rs"

[[bin]]
name = "cfg"
path = "src/cfg/main.rs"

[[bin]]
name = "json"
path = "src/json/main.rs"

[[bin]]
name = "loop"
path = "src/loop/main.rs"

[[bin]]
name = "unsafe"
path = "src/unsafe/main.rs"

[[bin]]
name = "trait"
path = "src/trait/main.rs"

[[bin]]
name = "afc"
path = "src/afc/main.rs"

[[bin]]
name = "macro"
path = "src/macro/main.rs"

[[bin]]
name = "async"
path = "src/async/main.rs"
