[package]
name = "mutex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
parking_lot = "0.11.1"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros"] }
warp = "0.3.1"
