[package]
name = "redis_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
redis = { version = "0.21.0", features = ["aio", "tokio-comp", "connection-manager"] }
tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }
