[package]
name = "tokio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
parking_lot = "0.11.1"
tokio = {version = "1",features = ["time","sync","macros","rt-multi-thread"]}
tokio-stream = "0.1.7"
