[package]
name = "macro-demo"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(env, values("beta"))',
    'cfg(env, values("product"))',
] }

[dependencies]
macros = { path = "../macros" }

serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
validator = { version = "0.18.1", features = ["derive"] }
schemars = { version = "1.0.0-alpha.16" }
strum = "0.26.1"
strum_macros = "0.26.1"
# inventory = "0.3.12"
