[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1.45", features = ["full"] }
dotenvy = "0.15"

[dependencies.sea-orm]
version = "1.1.11"
features = [
  "runtime-actix-native-tls",
  "runtime-async-std",
  "sqlx-mysql",
  "with-json",
]
