[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.11" # sea-orm-migration version
features = [
  "runtime-actix-native-tls",
  "runtime-async-std",
  "sqlx-mysql",
  "with-json",
]
